# modern-python

./: .flake8  .gitignore  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
docs/: conf.py  index.rst
src/modern_python/: console.py  wikipedia.py
tests/: test_console.py  test_wikipedia.py
