[tool.poetry]
name = "modern-python"
version = "0.1.0"
authors = ["kamsyn95 <kamilsynowiec95@gmail.com>"]
description = "The hypermodern Python project"

license = "MIT"
readme = "README.md"
homepage = "https://github.com/kamsyn95/modern-python"
repository = "https://github.com/kamsyn95/modern-python"

#packages = [
#    { include = 'modern_python', from = 'src' }
#]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"

[tool.poetry.scripts]
modern-python = "modern_python.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["modern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 80
